Overview of changes in Ethereal 0.6.3:
* Capture dialogue window data bug-fix (Guy)
* PPPoE (PPP over Ethernet) added (Jeff Jahr)
* ISAKMP, GRE, PPTP added (Brad Robel-Forrest)
* RSVP added (Ashok Narayanan)
* Summary dialogue added (Aaron Hillegass)

Overview of changes in Ethereal 0.6.2:
* Almost-real-time capture and display (John, Laurent)
* Initial support for SMB (Richard)
* Initial support for SNMP (Didier, Gilbert)
* Wiretap now reads NetMon 2.0 file formats (Guy)

Overview of changes in Ethereal 0.6.1:
* Released because of packaging problem in 0.6.0
* Information about building on Tru64

Overview of changes in Ethereal 0.6.0:
* IPv6 support greatly improved (Jun-ichiro)
* IPsec added (Jun-ichiro)
* NCP code totally re-written (Gilbert)
* GTK dependencies removed from packet-*.c code (Gilbert)
* Captures now saved in temporary files (Gilbert)
* Statistics are more accurate during capture (Guy)
* TCP-follow bug fixed (Laurent)
* ANSI complieant bitfields for TCP and AATALK (Gilbert)
* Various time fields decoded better (Guy)
* NetBIOS Node types added to DHCP (Guy)
* Cisco Discovery Protocol updated (Hannes)
* DNS acronyms converted to English (Guy)
* FTP, TFTP, POP, and Telnet added (Richard)
* NNTP and HTTP added (Guy)
* NetBIOS Sessions over TCP added (Guy)
* NetBIOS Name Servic improved (Guy)
* IP field over-writing bug fixed (Hannes)
* Wiretap does some offline filtering (Gilbert)
* Wiretap now supports NetMon, NetXray, Sniffer Pro (Guy)

Overview of changes in Ethereal 0.5.1:
* Updated Vines support (Joerg Mayer)
* Bitfield decoding support (Guy)
* GTK+ 1.1/1.2 support (Gilbert, Gerald)
* Make TCP info more verbose (Gerald)
* Fix resize problems w/main window (Gerald)
* Fix time output (Gerald)
* Add support for AIX iptrace files to wiretap (Gilbert)

Overview of changes in Ethereal 0.5.0:
* Initial release of wiretap library (Gilbert)
* Sun C compiler fixes (Laurent)
* Enhanced PPP support (Guy)
* OMG CORBA GIOP/IIOP support (Laurent)