@@ -98,6 +98,7 @@ Brad Robel-Forrest <bradr@watchguard.com> {
 
 Ashok Narayanan <ashokn@cisco.com> {
 	RSVP
+	Match Selected functionality
 }
 
 Aaron Hillegass <aaron@classmax.com> {
