@@ -1,7 +1,7 @@
 /* menu.c
  * Menu routines
  *
- * $Id: menu.c,v 1.21 1999/06/22 22:02:12 gram Exp $
+ * $Id: menu.c,v 1.22 1999/06/24 16:25:59 gram Exp $
  *
  * Ethereal - Network traffic analyzer
  * By Gerald Combs <gerald@zing.org>
@@ -99,10 +99,11 @@ static GtkItemFactoryEntry menu_items[] =
   {"/Capture/_Start...", "<control>K", GTK_MENU_FUNC(capture_prep_cb), 0, NULL},
   {"/_Display", NULL, NULL, 0, "<Branch>" },
   {"/Display/_Options...", NULL, GTK_MENU_FUNC(display_opt_cb), 0, NULL},
+  {"/Display/_Match Selected", NULL, GTK_MENU_FUNC(match_selected_cb), 0, NULL},
   {"/_Tools", NULL, NULL, 0, "<Branch>" },
   {"/Tools/_Capture...", NULL, GTK_MENU_FUNC(capture_prep_cb), 0, NULL},
   {"/Tools/_Follow TCP Stream", NULL, GTK_MENU_FUNC(follow_stream_cb), 0, NULL},
-  {"/Tools/Graph", NULL, NULL, 0, NULL},
+/*  {"/Tools/Graph", NULL, NULL, 0, NULL}, future use */
   {"/Tools/Summary", NULL, GTK_MENU_FUNC(summary_prep_cb), 0, NULL},
   {"/_Help", NULL, NULL, 0, "<LastBranch>" },
   {"/Help/_About Ethereal...", NULL, GTK_MENU_FUNC(about_ethereal), 0, NULL}
@@ -135,9 +136,10 @@ static GtkMenuEntry menu_items[] =
   {"<Main>/Edit/Preferences...", NULL, prefs_cb, (gpointer) E_PR_PG_NONE},
   {"<Main>/Capture/Start...", "<control>K", capture_prep_cb, NULL},
   {"<Main>/Display/Options...", NULL, display_opt_cb, NULL},
+  {"<Main>/Display/Match Selected", NULL, match_selected_cb, NULL},
   {"<Main>/Tools/Capture...", NULL, capture_prep_cb, NULL},
   {"<Main>/Tools/Follow TCP Stream", NULL, follow_stream_cb, NULL},
-  {"<Main>/Tools/Graph", NULL, NULL, NULL},
+/*  {"<Main>/Tools/Graph", NULL, NULL, NULL}, future use */
   {"<Main>/Tools/Summary", NULL, summary_prep_cb, NULL},
   {"<Main>/Help/About Ethereal...", NULL, about_ethereal, NULL}
 };
@@ -213,6 +215,7 @@ menus_init(void) {
     set_menu_sensitivity("/Tools/Summary", FALSE);
 #ifdef WITH_WIRETAP
     set_menu_sensitivity("/Tools/Follow TCP Stream", FALSE);
+    set_menu_sensitivity("/Display/Match Selected", FALSE);
 #endif
     
 #else
@@ -234,6 +237,7 @@ menus_init(void) {
     set_menu_sensitivity("<Main>/Tools/Summary", FALSE);
 #ifdef WITH_WIRETAP
     set_menu_sensitivity("<Main>/Tools/Follow TCP Stream", FALSE);
+    set_menu_sensitivity("<Main>/Display/Match Selected", FALSE);
 #endif
     if ((mp = gtk_menu_factory_find(factory, "<Main>/Help")) != NULL) {
       gtk_menu_item_right_justify((GtkMenuItem *) mp->widget);
